Affiche le bouton ajouter aux admins locaux

--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -10,7 +10,7 @@
 
 {% block action %}
         <li class="btn btn-primary">
-            <a href="{{ path('user_payment_new', {'slug': structure.slug}) }}" title="Ajouter une nouvelle gateway">
+            <a href="{{ path('user_payment_new', {'slug': structure.slug}) }}" title="Ajouter un nouveau moyen de paiement">
                 <i class='fas fa-plus'></i> Ajouter un moyen de paiement
             </a>
         </li>
