--- a/templates/receipt/edit.html.twig
+++ b/templates/receipt/edit.html.twig
@@ -8,8 +8,14 @@
     {% if receipt is not null %}{{ receipt.imageName }} - Modification {% else %} Signataire - Ajout {% endif %}
 {% endblock %}
 
+{% block action %}
+{{ mopa_bootstrap_menu('parameter') }}
+{% endblock %}
+
 {% block content %}
-    <div class="card">
+<div class="card">
+    <div class="card-body">
         {{ form(form) }}
     </div>
+</div>
 {% endblock %}
