--- a/templates/fee/edit.html.twig
+++ b/templates/fee/edit.html.twig
@@ -8,8 +8,14 @@
     {% if fee is not null %}{{ fee }} - Modification {% else %} Tarification - Ajout {% endif %}
 {% endblock %}
 
+{% block action %}
+{{ mopa_bootstrap_menu('parameter') }}
+{% endblock %}
+
 {% block content %}
-    <div class="card">
+<div class="card">
+    <div class="card-body">
         {{ form(form) }}
     </div>
+</div>
 {% endblock %}
