--- a/templates/parameter/index.html.twig
+++ b/templates/parameter/index.html.twig
@@ -5,16 +5,13 @@
 {% block headline %}{{ structure.name }} - Paramètres{% endblock %}
 
 {% block action %}
-    </ul>
-    {{ mopa_bootstrap_menu('parameter') }}
+{{ mopa_bootstrap_menu('parameter') }}
 {% endblock %}
 
 {% block content %}
-    <div class="card">
+<div class="card">
+    <div class="card-body">
         {{ form(parameter_form) }}
     </div>
-{% endblock %}
-
-{% block javascripts %}
-  {{ parent() }}
+</div>
 {% endblock %}
