--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -9,55 +9,42 @@
 {% endblock %}
 
 {% block action %}
-        <li class="btn btn-primary">
-            <a href="{{ path('user_payment_new', {'slug': structure.slug}) }}" title="Ajouter un nouveau moyen de paiement">
-                <i class='fas fa-plus'></i> Ajouter un moyen de paiement
-            </a>
-        </li>
-    </ul>
-    {{ mopa_bootstrap_menu('parameter') }}
+<a class="btn btn-primary" href="{{ path('user_payment_new', {'slug': structure.slug}) }}" title="Ajouter un nouveau moyen de paiement">
+    <i class='fas fa-plus'></i> Ajouter un moyen de paiement
+</a>
+{{ mopa_bootstrap_menu('parameter') }}
 {% endblock %}
 
 {% block content %}
-    <ul class="entities gateways list-group card">
-        {% for gateway in gateways %}
-            <li class="entity gateway list-group-item row">
-                <span class="float-right">
-                    <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown"><i class='fas fa-bars'></i> <span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li class="action">
-                            <a href="{{ path('user_payment_edit', {'id': gateway.id, 'slug': structure.slug}) }}" title="Modifier le moyen de paiement '{{ gateway.gatewayName }}'" class="edit">
-                                <i class='fas fa-pencil-alt'></i> Modifier
-                            </a>
-                        </li>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <li class="action">
-                                <a href="{{ path('user_payment_delete', {'id': gateway.id, 'slug': structure.slug}) }}" title="Supprimer le moyen de paiement '{{ gateway.gatewayName }}'" class="confirm delete" confirm="Attention, vous allez supprimer la gateway et toutes les informations s'y rapportant ! Voulez-vous continuer ?">
-                                    <i class='fas fa-trash'></i> Supprimer
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </span>
-
-                <div class="">Nom machine : {{ gateway.gatewayName }}</div>
-                <div class="">Type : {{ gateway.factoryName }}</div>
-                <div class="">Étiquette : {{ gateway.label }}</div>
-            </li>
-        {% else %}
-            <li class="noentity gateway">
-                Aucun moyen de paiement enregistré enregistrée.
-                {% if is_granted('ROLE_ADMIN') %}
+{% for gateway in gateways %}
+    <div class="card mb-2">
+        <div class="card-header bg-primary text-white">
+            <i class="fas fa-credit-card"></i>
+            {{ gateway.label }}
+        </div>
+        <div class="card-body">
+            <p class="card-text">Nom machine : {{ gateway.gatewayName }}</p>
+            <p class="card-text">Type : {{ gateway.factoryName }}</p>
+        </div>
+        <div class="card-footer text-center">
+            <a class="edit btn btn-primary btn-sm" href="{{ path('user_payment_edit', {'id': gateway.id, 'slug': structure.slug}) }}" title="Modifier le moyen de paiement '{{ gateway.gatewayName }}'">
+                <i class='fas fa-pencil-alt'></i> Modifier
+            </a>
+            <a class="confirm delete btn btn-primary btn-sm" href="{{ path('user_payment_delete', {'id': gateway.id, 'slug': structure.slug}) }}" title="Supprimer le moyen de paiement '{{ gateway.gatewayName }}'" confirm="Attention, vous allez supprimer la gateway et toutes les informations s'y rapportant ! Voulez-vous continuer ?">
+                <i class='fas fa-trash'></i> Supprimer
+            </a>
+        </div>
+    </div>
+{% else %}
+    <div class="card">
+        <div class="card-header">
+            Aucun moyen de paiement enregistré enregistrée.
+            {% if is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('user_payment_new', {'slug': structure.slug}) }}" title="Ajouter un moyen de paiement">Ajouter un moyen de paiement</a>.
-                {% else %}
-                    Contactez un administrateur.
-                {% endif %}
-            </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('bundles/pigasscore/js/confirm.js') }}" type="text/javascript"></script>
+            {% else %}
+                Contactez un administrateur.
+            {% endif %}
+        </div>
+    </div>
+{% endfor %}
 {% endblock %}
