--- a/templates/receipt/index.html.twig
+++ b/templates/receipt/index.html.twig
@@ -25,45 +25,34 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="entities receipts list-group card">
-        {% for receipt in receipts %}
-            <li class="entity receipt list-group-item row">
-                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_STRUCTURE') %}
-                    <span class="float-right">
-                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown"><i class='fas fa-bars'></i> <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li class="action">
-                                <a href="{{ path('core_receipt_edit', {'slug': structure.slug, 'id': receipt.id}) }}" title="Modifier l'émetteur de reçu fiscal '{{ receipt.imageName }}'" class="edit">
-                                    <i class='fas fa-pencil-alt'></i> Modifier
-                                </a>
-                            </li>
-                            <li class="action">
-                                <a href="{{ path('core_receipt_delete', {'id': receipt.id}) }}" title="Supprimer l'émetteur de reçu fiscal '{{ receipt.imageName }}'" class="confirm delete" confirm="Attention, vous allez supprimer la receipt et toutes les informations s'y rapportant ! Voulez-vous continuer ?">
-                                    <i class='fas fa-trash'></i> Supprimer
-                                </a>
-                            </li>
-                        </ul>
-                    </span>
-                {% endif %}
-
-                <div class="col-sm-2">
-                    <div class="title">Du {{ receipt.begin|date('m/Y') }} au {{ receipt.end|date('m/Y') }}</div>
-                    <div>{{ receipt.person }}</div>
-                    <div>{{ receipt.position }}</div>
-                </div>
-                <div class="col-sm-2">
-                    <img src="{{ asset(vich_uploader_asset(receipt, 'image')) }}" alt="Signature de {{ receipt.person }}" class="logo" />
-                </div>
-            </li>
-        {% else %}
-            <li class="noentity receipt list-group-item">
+{% for receipt in receipts %}
+    <div class="card mb-2">
+        <div class="card-header bg-primary text-white">
+            <i class="fas fa-edit"></i>
+            Du {{ receipt.begin|date('m/Y') }} au {{ receipt.end|date('m/Y') }}
+        </div>
+        <div class="card-body row">
+            <div class="col-sm-2">
+                <img src="{{ asset(vich_uploader_asset(receipt, 'image')) }}" alt="Signature de {{ receipt.person }}" class="logo" />
+            </div>
+            <div class="col-sm-auto">
+                <div class="font-weight-bold">{{ receipt.person }}</div>
+                <div class="font-italic">{{ receipt.position }}</div>
+            </div>
+        </div>
+        <div class="card-footer text-center">
+            <a class="edit btn btn-primary btn-sm" href="{{ path('core_receipt_edit', {'slug': structure.slug, 'id': receipt.id}) }}" title="Modifier l'émetteur de reçu fiscal '{{ receipt.imageName }}'">
+                <i class='fas fa-pencil-alt'></i> Modifier
+            </a>
+            <a class="confirm delete btn btn-primary btn-sm" href="{{ path('core_receipt_delete', {'id': receipt.id}) }}" title="Supprimer l'émetteur de reçu fiscal '{{ receipt.imageName }}'" confirm="Attention, vous allez supprimer la receipt et toutes les informations s'y rapportant ! Voulez-vous continuer ?">
+                <i class='fas fa-trash'></i> Supprimer
+            </a>
+        </div>
+{% else %}
+    <div class="card">
+        <div class="card-header">
                 Aucun émetteur de reçu fiscal enregistré. <a href="{{ path('core_receipt_new', {'slug': structure.slug}) }}" title="Ajouter un émetteur de reçu fiscal">Ajouter un émetteur de reçu fiscal</a>.
-            </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('bundles/pigasscore/js/confirm.js') }}" type="text/javascript"></script>
+        </div>
+    </div>
+{% endfor %}
 {% endblock %}
