Suppression des dépendances à KnpMenuBundle et MopaBootstrapBundle

--- a/templates/dashboard/admin.html.twig
+++ b/templates/dashboard/admin.html.twig
@@ -5,8 +5,7 @@
 {% block headline %}{{ structure.name }} - Administration{% endblock %}
 
 {% block action %}
-    </ul>
-    {{ mopa_bootstrap_menu('parameter') }}
+{% include '/dashboard/admin_menu.html.twig' with {'slug': structure.slug} %}
 {% endblock %}
 
 {% block content %}
