--- a/templates/parameter/index.html.twig
+++ b/templates/parameter/index.html.twig
@@ -5,7 +5,7 @@
 {% block headline %}{{ structure.name }} - Paramètres{% endblock %}
 
 {% block action %}
-{{ mopa_bootstrap_menu('parameter') }}
+{% include '/dashboard/admin_menu.html.twig' with {'slug': structure.slug} %}
 {% endblock %}
 
 {% block content %}
