--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,3 @@
-{% from 'flash.html.twig' import session_flash %}
-
 <!DOCTYPE html>
 
 <html lang="{{ locale }}">
@@ -108,9 +106,21 @@
             <section id="content" class="col-sm-8 col-xs-12">
 
                 {% block flashes %}
-                    {% if app.session.flashbag.peekAll|length > 0 %}
-                        <div class="w-100">{{ session_flash(true, true) }}</div>
-                    {% endif %}
+                    {% for type, messages in app.flashes %}
+                        {% for message in messages %}
+                            {% if type == 'notice' %}
+                                {% set label = 'alert-info' %}
+                            {% elseif type == 'error' %}
+                                {% set label = 'alert-danger' %}
+                            {% else %}
+                                {% set label = 'alert-' ~ type %}
+                            {% endif %}
+                            <div class="w-100 alert {{ label }} alert-dismissible fade show" role="alert">
+                                {{ message | raw }}
+                                <a class="close" data-dismiss="alert" aria-hidden= "true" href="#">&times;</a>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
                 {% endblock flashes %}
 
                 <div class="content">
