Configuration de VichUploaderBundle pour Receipt et Structure

--- a/templates/receipt/index.html.twig
+++ b/templates/receipt/index.html.twig
@@ -24,7 +24,7 @@
         </div>
         <div class="card-body row">
             <div class="col-sm-2">
-                <img src="{{ asset(vich_uploader_asset(receipt, 'image')) }}" alt="Signature de {{ receipt.person }}" class="logo" />
+                <img src="{{ asset(vich_uploader_asset(receipt, 'imageFile')) }}" alt="Signature de {{ receipt.person }}" class="logo" />
             </div>
             <div class="col-sm-auto">
                 <div class="font-weight-bold">{{ receipt.person }}</div>
