--- a/templates/register/list.html.twig
+++ b/templates/register/list.html.twig
@@ -83,7 +83,7 @@
             <li class="card">
                 <div class="card-header text-center">
                     {% if membership.structure.logo is not null %}
-                        <img src="{{ asset('uploads/' ~ membership.structure.logo) }}" alt="{{ membership.structure.logo }}" class="logo"/>
+                        <img src="{{ asset(vich_uploader_asset(membership.structure, 'logoFile')) }}" alt="{{ membership.structure.logo }}" class="logo"/>
                     {% endif %}
                     {{ membership.structure.name }}
                 </div>
